logs/dag_id=extract_fdic_ncua/run_id=manual__2024-01-11T22:53:12.772912+00:00/task_id=fdic.extract_fdic_financials/attempt=1.log
[2024-01-11T22:53:13.679+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: extract_fdic_ncua.fdic.extract_fdic_financials manual__2024-01-11T22:53:12.772912+00:00 [queued]>
[2024-01-11T22:53:13.684+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: extract_fdic_ncua.fdic.extract_fdic_financials manual__2024-01-11T22:53:12.772912+00:00 [queued]>
[2024-01-11T22:53:13.685+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-01-11T22:53:13.692+0000] {taskinstance.py:2192} INFO - Executing <Task(_PythonDecoratedOperator): fdic.extract_fdic_financials> on 2024-01-11 22:53:12.772912+00:00
[2024-01-11T22:53:13.696+0000] {standard_task_runner.py:60} INFO - Started process 3545 to run task
[2024-01-11T22:53:13.699+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'extract_fdic_ncua', 'fdic.extract_fdic_financials', 'manual__2024-01-11T22:53:12.772912+00:00', '--job-id', '10', '--raw', '--subdir', 'DAGS_FOLDER/fdic-ncua-ingest.py', '--cfg-path', '/tmp/tmp0qmrvyi7']
[2024-01-11T22:53:13.700+0000] {standard_task_runner.py:88} INFO - Job 10: Subtask fdic.extract_fdic_financials
[2024-01-11T22:53:13.734+0000] {task_command.py:423} INFO - Running <TaskInstance: extract_fdic_ncua.fdic.extract_fdic_financials manual__2024-01-11T22:53:12.772912+00:00 [running]> on host c111cf247bc6
[2024-01-11T22:53:13.772+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='extract_fdic_ncua' AIRFLOW_CTX_TASK_ID='fdic.extract_fdic_financials' AIRFLOW_CTX_EXECUTION_DATE='2024-01-11T22:53:12.772912+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-11T22:53:12.772912+00:00'
[2024-01-11T22:53:14.169+0000] {base.py:83} INFO - Using connection ID 'alpharank_de_eval' for task execution.
[2024-01-11T22:53:14.470+0000] {sql.py:432} INFO - Running statement: 
        INSERT INTO raw.fdic_financials (
            zip, idt1rwajr, extra, tfra, idncconr, stname, eqcdivntinc, insdate, bkprem, szlncon, intan, ntrenrsr, obsdir, offoa, p9ltot, ntallothr, iglsec, eeffr, idt1cer, namehcr, ntremulr, depdom, ibefxtr, intincy, eqv, netinc, lnlsdepr, fdicsupvdesc, mutual, offfor, naasset, ntlslr, depunins, depnidom, rssdhcr, lnatresr, asdroth, szlnres, cert, stalp, ntcomrer, eintexp, depcsbq, coredep, callform, rssdid, cblrind, sc, qbprcomldesc, elnantr, endefymd, nperfv, lnresncr, cb, regagnt, numemp, asset, ncremulr, ncreconr, stcnty, naltot, idlncorr, specgrpdesc, szlauto, city, p9asset, stmult, p3asset, depallex, liab, itax, trade, nimy, insagnt1, depins, bkclass, noij, noijy, idnccir, effdate, lsaore, elnatr, ntrer, intinc, netinbm, eqcstkrx, uc, lsalnls, ntlsl, fldoff, ernastr, nclnlsr, lnlsnet, depfor, ncrenrer, parcert, roa, p3ltot, risdate, eqcdiv, roeinjr, roe, szlnhel, occdistdesc, eq, name, hctmult, szlncrcd, nonixay, szlnoth, frepo, fdicdbsdesc, chbal, lsaoa, offdom, subchaps, asdrres, ncrer, aoar, ore, active, ntrecosr, ncreresr, depidom, repdte, idntcir, intexpy, rbc1aaj, ntreresr, astempm, aoa, roaptx, ptaxnetinc, depdastr, nccomrer, depbefex, feddesc, noniiay, idntconr, elnatry, nonix, lnlsntv, dep, cbsa, idncothr, nim, rbcrwaj, szlnci, lsascdbt, idncgtpr, namefull, iderncvr, nfaa, estymd, nonii, trust, eqtot, financials_id
        ) VALUES (
            
        )
    , parameters: None
[2024-01-11T22:53:14.548+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 242, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/fdic-ncua-ingest.py", line 60, in extract_fdic_financials
    insert_fdic_financials(hook=pg_hook, financials=financials)
  File "/opt/airflow/dags/utils/core/postgres/raw/fdic_financials/insert.py", line 34, in insert_fdic_financials
    hook.run(sql=sql)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6:         )
                ^

[2024-01-11T22:53:14.556+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=extract_fdic_ncua, task_id=fdic.extract_fdic_financials, execution_date=20240111T225312, start_date=20240111T225313, end_date=20240111T225314
[2024-01-11T22:53:14.564+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 10 for task fdic.extract_fdic_financials (syntax error at or near ")"
LINE 6:         )
                ^
; 3545)
[2024-01-11T22:53:14.574+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-11T22:53:14.586+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
